# guali_ws

./: ROS2_scripts.sh  ROS2_scripts0.sh  ROS2_scripts1.sh  ROS2_scripts2.sh  calibrate_Stereo.sh  ros2 run scripts.txt  wanstats.sh
calibrationdata/: ost.txt
camera_parameters_cli/: left.yaml  right.yaml
detectabasura/: CMakeLists.txt  package.xml
detectabasura/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
detectabasura/install/detectabasura/lib/detectabasura/: video_publisher
detectabasura/install/detectabasura/share/detectabasura/: local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
detectabasura/install/detectabasura/share/detectabasura/cmake/: detectabasuraConfig.cmake
detectabasura/log/: latest_build
detectabasura/src/: cameratest.cpp  serialMCU.cpp  video_publisher.cpp  video_publisherV1.0.cpp  video_publisher_24042024OK.cpp  video_publisher_cli.cpp  video_publisher_osxTXT.cpp  video_publisher_usb.cpp  video_publisher_usb_V1.0.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/detectabasura/lib/detectabasura/: cameratest  serialMCU  video_publisher  video_publisher_cli  video_publisher_usb
install/detectabasura/share/detectabasura/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  (+2 more)
log/: latest_build  video_publisher
nodeMCU/: angulosservos.txt
nodeMCU/.*****rc/TinyGPSPlusPlus/: library.json  library.properties
nodeMCU/global1/: global1.ino
nodeMCU/global2/: .global2.ino.swp  global2.ino
nodeMCU/serialReciveArduino/: serialReciveArduino.ino
nodeMCU/servotest/: servotest.ino
nodeMCU/trhead_test1/: trhead_test1.ino
(+21 files in other folders)
